# oactool

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonpackage.yml
oactool/: main.py  schema.py  spec_parse.py
oactool/parsers/: fish.py  man.py
oactool/renderers/: docopt.py  fish.py
