[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "oactool"
line_length = 120
multi_line_output = 3
not_skip = "__init__.py"
skip_glob = ".git,.venv"

[tool.poetry]
name = "oactool"
version = "0.1.2"
description = ""
packages = [
    { include = "oactool" }
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/openautocomplete/oactool"
repository = "https://github.com/openautocomplete/oactool"
classifiers = [
    "Topic :: Software Development :: Build Tools"
]
scripts = { oactool = 'oactool.main:main' }
authors = ["Alexander Shishenko <alex@shishenko.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonref = "^0.2"
click = "^7.1.2"
pydantic = "^1.5.1"
more-itertools = "^8.3.0"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.14.0"
flake8 = "^3.8.1"
isort = "^4.3.21"
pre-commit = "^2.4.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
